# nmsis_blinky

./: CMakeLists.txt  README.md  manual_flash.cfg  manual_flash.sh
cmake_scripts/: cleanhex.sh  flash.cfg  flash.sh
src/: main.c
